# volve-production-forecast

./: README.md
.devcontainer/: devcontainer.json
ticket-triage-ragbot/: .env  .env.example  .gitignore  README.md  pyproject.toml  (+1 more)
volve-production-analytics/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
volve-production-analytics/.github/workflows/: ci.yml
volve-production-analytics/app/: streamlit_app.py
volve-production-analytics/automation/power_automate/: README.md  email_template.md  flow_definition.json
volve-production-analytics/data/: README.md
volve-production-analytics/data/processed/: email_summary.txt  metrics.json
volve-production-analytics/docs/: data_dictionary.md  kpi_definitions.md  troubleshooting.md
volve-production-analytics/notebooks/: 01_eda.ipynb  02_forecast_backtest.ipynb
volve-production-analytics/reports/: final_report.md
volve-production-analytics/src/: __init__.py  config.py  data_prep.py  evaluation.py  features.py  forecasting.py  io_sharepoint.py  reporting.py
volve-production-analytics/src/automation/: __init__.py  status.py
volve-production-analytics/src/copilot/: __init__.py  placeholders.py  provider.py  rule_engine.py
volve-production-analytics/src/knowledge/: __init__.py  loader.py  retrieval.py
volve-production-analytics/src/scripts/: __init__.py  run_pipeline.py
volve-production-analytics/tests/: __init__.py  test_automation_status.py  test_copilot.py  test_data_prep.py  test_forecasting_shapes.py  test_io_sharepoint.py  test_json_export.py  test_knowledge.py
(+13 files in other folders)
